--- a/style.css
+++ b/style.css
@@ -1,24 +1,28 @@
 * {
-  outline: dotted 2px orange;
+  font-family: sans-serif;
+  box-sizing: border-box;
 }
 
 .clearfix {
   clear: both;
 }
 
-body {
-  height:auto;
-  width: 1240px;
+.background {
+  height: 100%;
+  width: 100%;
+  background: url("http://www.gotechnologix.com/wp-content/uploads/2016/05/dark-background-wallpaper.jpg")no-repeat relative;
 }
 
 header {
+  width: 100%;
   height:40px;
-  background: #444;
+  background: #777;
   position: fixed;
+  box-shadow: 3px 3px 1px #888;
 }
 
 header div {
-  width: 1240px;
+  width: 100%;
   margin: 0px auto;
 }
 
@@ -37,15 +41,64 @@ header div li {
 }
 
 main {
- width:1240px;
+ width: 1240px;
  margin: 10px auto;
 }
 
-.placehold {
-  height: 40px;
-  width:1240px;
-  margin: 0px auto;
-}
-.hero {
+.me {
+  margin-top: 40px;
   float:left;
+}
+
+h2 {
+  height: 40px;
+  float: left;
+  background: #444;
+  color: white;
+  text-align: center;
+  font-size: 25px;
+}
+
+.experience h2 {
+  width: 620px;
+  margin-top: 40px;
+}
+
+ul {
+  font-size: 0px;
+}
+
+.experience li {
+  float: left;
+}
+
+.likes {
+  width: 930px;
+}
+
+.likes h2 {
+  width: 100%;
+}
+
+.likes li {
+  float:left;
+}
+
+.about_me  {
+  height: 460px;
+  width: 310px;
+  margin-top: -250px;
+  float: right;
+  background: #AAA;
+}
+
+.about_me h2 {
+  width: 100%;
+}
+
+p {
+  width: 300px;
+  color: white;
+  text-align: center;
+  line-height: 30px;
 }
